applets/appmenu: do not update menu when panel gets focus

This makes the keyboard navigation work in the appmenu applet.

BUG: 455520
FIXED-IN: 5.25.4 5.26


(cherry picked from commit 6d544e5c7bf4bcb76af12bf8d3b193c6f3bae66b)