applets/appmenu/package/contents/ui/main.qml
@@ -136,6 +136,7 @@ Item {
 
     AppMenuPrivate.AppMenuModel {
         id: appMenuModel
+        containmentStatus: Plasmoid.nativeInterface.containment.status
         screenGeometry: Plasmoid.screenGeometry
         onRequestActivateIndex: Plasmoid.nativeInterface.requestActivateIndex(index)
         Component.onCompleted: {
